     * 'ovs/route/show': added new option, table=[ID|all], to list routes from
       a specific OVS table or all routes from all tables.
     * Added a new sub-command, ovs/rule/show, to list OVS router rules.
     * 'ovs/route/add' and 'ovs/route/del': added new option, table=ID, to
       add/delete a route from a specific OVS table.
   - SSL/TLS:
     * Support for deprecated TLSv1 and TLSv1.1 protocols on OpenFlow and
       database connections is now removed.
   - Tunnels:
     * Support for previously deprecated LISP and STT tunnel port types
       is now removed.
   - ovs-tcpdump:
     * Update the --mirror-to option, adding support for specifying an
       existing port as a mirror interface.
   - Updated documentation to remove most documentation of kernel module
     that was previously part of the OVS distribution. It was removed from
     the OVS distribution in the 3.0 release and is no longer present in
     any supported versions of OVS. The remaining documentation of this
     kernel module relates to topics for older releases of OVS.


v3.5.0 - 17 Feb 2025
--------------------
   - The limit on the number of fields for address prefix tracking in flow
     tables increased from 3 to 4.  For example, it is now possible to
     specify both IPv4 and IPv6 address fields at the same time:
      $ ovs-vsctl set Bridge br0 flow_tables:123=@N -- \
          --id=@N create Flow_Table \
                    name=table123 prefixes=nw_dst,nw_src,ipv6_dst,ipv6_src
   - Address prefix tracking is now enabled by default for both IPv4 and IPv6
     address fields: nw_dst, nw_src, ipv6_dst and ipv6_src.
     This allows to significantly reduce amount of datapath flows generated
     from mixed IPv4+IPv6 flow tables.
   - SSL/TLS:
     * TLSv1 and TLSv1.1 protocols are deprecated and disabled by default
       on OpenFlow and database connections.  Use --ssl-protocols to turn
       them back on.  Support will be fully removed in the next release.